--- a/CSS/CSS02-ConfigTexto/CSS/03/SELEBRES/style.css
+++ b/CSS/CSS02-ConfigTexto/CSS/03/SELEBRES/style.css
@@ -11,4 +11,7 @@
 /* para diferenciar os paragrafos e as cores, class= nome aos paragrafos, não dve se dar o mesmo nome
 
 .= para mais de um elemento (com o mesmo nome)
-# para ids (só para um único nome)
+# para ids (só para um nome ou seja, não repete o nome
+
+
+ 
